201 created voor put requests api

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,10 +2,10 @@
 
 one:
   name: MyString
-  email: MyString
+  email: MyString@1.1
   approved: false
 
 two:
   name: MyString
-  email: MyString
+  email: MyString@2.2
   approved: false
