--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -11,6 +11,7 @@ pipelines:
         script: # Modify the commands below to build your repository.
           - bundler --version
           - bundle install
+          - rails db:create
           - rails test test/models/motion_test.rb
         services:
             - database
