--- a/test/fixtures/beers.yml
+++ b/test/fixtures/beers.yml
@@ -1,9 +1,31 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
-  soort: MyString
+beerone:
+  name: Leffe Blond
+  soort: Blond
+  percentage: 6.6
 
-two:
-  name: MyString
-  soort: MyString
+beertwo:
+  name: Hel & Verdoemenis
+  soort: Imperial Stout
+  percentage: 10.0
+
+beerthree:
+  name: Zundert
+  soort: Tripel
+  percentage: 8.0
+
+beerfour:
+  name: Dikke Lul Drie Bier
+  soort: IPA
+  percentage: 5.6
+
+beerfive:
+  name: Achel
+  soort: Bruin
+  percentage: 8.0
+
+beersix:
+  name: Oesterstout
+  soort: Imperial Stout
+  percentage: 8.5
