--- a/test/fixtures/groups.yml
+++ b/test/fixtures/groups.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
+groupone:
   user_id: 1
   group_id: 1
 
-two:
+grouptwo:
   user_id: 1
   group_id: 2
