--- a/test/fixtures/motions.yml
+++ b/test/fixtures/motions.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  motion_type: MyString
-  subject: MyString
-  content: MyText
+motionone:
+  motion_type: niet chill
+  subject: Hamer
+  content: Hij is nog steeds niet gelaserprint
 
 two:
-  motion_type: MyString
-  subject: MyString
-  content: MyText
+  motion_type: vet arelaxed
+  subject: Beiaard
+  content: We hebben al vet lang geen gratis eten meer gekregen
