started working on controller/functional tests

--- a/test/fixtures/meetings.yml
+++ b/test/fixtures/meetings.yml
@@ -3,7 +3,10 @@
 one:
   agenda: MyText
   notes: MyText
+  date: 2015-01-10 00:22:44
 
 two:
   agenda: MyText
   notes: MyText
+  date: 2015-01-10 00:22:44
+
