--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,24 +1,24 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-userone:
+one:
   id: 1
   name: Hamer Tester
   email: testhamer@zondersikkel.nl
   approved: true
 
-usertwo:
+two:
   id: 2
   name: Hamer Tester 2
   email: testhamer2@zondersikkel.nl
   approved: true
 
-userthree:
+three:
   id: 3
   name: Hamer Tester 3
   email: testhamer3@zondersikkel.nl
   approved: true
 
-userfour:
+four:
   id: 4
   name: Hamer Tester 4
   email: testhamer4@zondersikkel.nl
