--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -11,6 +11,9 @@ pipelines:
         cache: 
           - bundler
         script: # Modify the commands below to build your repository.
+          - apt-get update && apt-get install -y locales
+          - echo "en_US.UTF-8 UTF-8" > /etc/locale.gen
+          - locale-gen
           - export LANG=en_US.UTF-8
           - export LANGUAGE=en_US.UTF-8
           - export LC_ALL=en_US.UTF-8
