--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -17,6 +17,7 @@ pipelines:
           - export LANG=en_US.UTF-8
           - export LANGUAGE=en_US.UTF-8
           - export LC_ALL=en_US.UTF-8
+          - gem install bundler
           - bundler --version
           - bundle install --path vendor/bundle
           - rails db:create
