--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,10 @@ bower.json
 .byebug_history
 
 tags
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
