--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
     "@rails/ujs": "^6.0.3-4",
     "@rails/webpacker": "4.2.2",
     "core-js": "^3.8.0",
+    "flatpickr": "^4.6.9",
     "rails-ujs": "^5.2.4-4",
     "regenerator-runtime": "^0.13.7",
     "stimulus": "^1.1.1",
+    "stimulus-flatpickr": "^1.4.0",
     "trix": "^1.0.0"
   },
   "devDependencies": {
