--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@rails/actiontext": "^6.0.2",
     "@rails/ujs": "^6.0.3-4",
-    "@rails/webpacker": "4.2.2",
+    "@rails/webpacker": "5.3.0",
     "core-js": "^3.8.0",
     "flatpickr": "^4.6.9",
     "rails-ujs": "^5.2.4-4",
     "regenerator-runtime": "^0.13.7",
     "stimulus": "^1.1.1",
     "stimulus-flatpickr": "^1.4.0",
-    "trix": "^1.0.0"
+    "trix": "^1.0.0",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.2"
   }
 }
