--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@rails/actiontext": "^6.0.2",
     "@rails/ujs": "^6.0.3-4",
     "@rails/webpacker": "5.3.0",
+    "bootstrap": "3.3.7",
     "core-js": "^3.8.0",
     "flatpickr": "^4.6.9",
     "rails-ujs": "^5.2.4-4",
