--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "3.3.7",
     "core-js": "^3.8.0",
     "flatpickr": "^4.6.9",
+    "jquery": "3.4.1",
     "rails-ujs": "^5.2.4-4",
     "regenerator-runtime": "^0.13.7",
     "stimulus": "^1.1.1",
@@ -16,6 +17,9 @@
     "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
+    "node-sass": "^5.0.0",
+    "resolve-url-loader": "^3.1.2",
+    "sass-loader": "^11.0.1",
     "webpack-dev-server": "^3.11.2"
   }
 }
