--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "regenerator-runtime": "^0.13.7",
     "stimulus": "^1.1.1",
     "stimulus-flatpickr": "^1.4.0",
+    "tablesort": "^5.2.1",
     "trix": "^1.0.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
