--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "stimulus-flatpickr": "^1.4.0",
     "tablesort": "^5.2.1",
     "trix": "^1.0.0",
+    "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
