--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "core-js": "^3.8.0",
     "flatpickr": "^4.6.9",
     "jquery": "3.4.1",
+    "nprogress": "^0.2.0",
     "popper.js": "^1.16.1",
     "rails-ujs": "^5.2.4-4",
     "regenerator-runtime": "^0.13.7",
     "stimulus": "^1.1.1",
     "stimulus-flatpickr": "^1.4.0",
     "tablesort": "^5.2.1",
-    "trix": "^1.0.0",
+    "trix": "^1.3.1",
+    "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
