--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,7 +16,7 @@ on:
 jobs:
   test:
 
-    runs-on: debian-bullseye
+    runs-on: bullseye
     strategy:
       matrix:
         ruby-version: ['2.7.2', '2.7.4']
