--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,6 +11,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Set up mysql
+      uses: mirromutth/mysql-action@v1.1
     - name: Set up ruby
       uses: ruby/setup-ruby@v1
       with:
