--- a/config/database.yml
+++ b/config/database.yml
@@ -7,7 +7,10 @@ development:
   host: 127.0.0.1
 
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: mysql2
+  encoding: utf8mb4
+  database: hamers_test
+  username: hamers
+  password: hamers
+  host: 127.0.0.1
+  strict: false
