--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,6 +13,10 @@ jobs:
     - uses: actions/checkout@v2
     - name: Set up mysql
       uses: mirromutth/mysql-action@v1.1
+      with:
+        mysql database: 'hamers_test'
+        mysql user: 'hamers'
+        mysql password: 'hamers'
     - name: Set up ruby
       uses: ruby/setup-ruby@v1
       with:
