--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,13 +10,13 @@ jobs:
         ruby-version: ['2.7.2', '2.7.4']
     services:
       mysql:
-        image: mysql:5.7
+        image: mariadb:latest
         env:
-          MYSQL_ALLOW_EMPTY_PASSWORD: yes
           MYSQL_HOST: 127.0.0.1
           MYSQL_DB: hamers_test
           MYSQL_USER: hamers
-#          MYSQL_PASSWORD: hamers
+          MYSQL_PASSWORD: hamers
+          MYSQL_ROOT_PASSWORD: password
         ports: [3306]
     steps:
     - uses: actions/checkout@v2
