--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,13 +18,18 @@ jobs:
           MARIADB_PASSWORD: hamers
           MARIADB_ALLOW_EMPTY_ROOT_PASSWORD: true
         ports: [3306]
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up ruby
-      uses: ruby/setup-ruby@v1
-      with:
-        ruby-version: ${{ matrix.ruby-version }}
-        bundler-cache: true
-    - name: Run tests
-      run: |
-        bundle exec rake
+      - name: Verify MySQL connection from container
+        run: |
+          apt-get update
+          apt-get install -y mariadb-client
+          mysql --host mariadb -uroot -e "SHOW DATABASES"
+      - uses: actions/checkout@v2
+      - name: Set up ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: ${{ matrix.ruby-version }}
+          bundler-cache: true
+      - name: Run tests
+        run: bundle exec rake
