--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,19 +9,17 @@ jobs:
       matrix:
         ruby-version: ['2.7.2', '2.7.4']
     services:
-      mariadb:
-        image: mariadb:latest
-        env:
-          MARIADB_HOST: 127.0.0.1
-          MARIADB_DB: hamers_test
-          MARIADB_USER: hamers
-          MARIADB_PASSWORD: hamers
-          MARIADB_ALLOW_EMPTY_ROOT_PASSWORD: true
-        ports: [3306]
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+#      mariadb:
+#        image: mariadb:latest
+#        env:
+#          MARIADB_HOST: 127.0.0.1
+#          MARIADB_DB: hamers_test
+#          MARIADB_USER: hamers
+#          MARIADB_PASSWORD: hamers
+#          MARIADB_ALLOW_EMPTY_ROOT_PASSWORD: true
+#        ports: [3306]
+#        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
     steps:
-      - name: Verify mysql connection from container
-        run: mysql --host mariadb -uroot -e "SHOW DATABASES"
       - uses: actions/checkout@v2
       - name: Set up ruby
         uses: ruby/setup-ruby@v1
@@ -29,4 +27,7 @@ jobs:
           ruby-version: ${{ matrix.ruby-version }}
           bundler-cache: true
       - name: Run tests
-        run: bundle exec rake
+        run: |
+          - systemctl start mysql
+          - cp config/database-ci.yml config/database.yml
+          - bundle exec rake
