--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         ruby-version: ['2.7.2', '2.7.4']
-    services:
+#    services:
 #      mariadb:
 #        image: mariadb:latest
 #        env:
