--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,6 +2,9 @@ name: Tests
 
 on: [push, pull_request]
 
+env:
+  RAILS_ENV: test
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -15,11 +18,13 @@ jobs:
         with:
           ruby-version: ${{ matrix.ruby-version }}
           bundler-cache: true
+      - name: Start database server
+        run: sudo systemctl start mysql
+      - name: Setup database connection configuration
+        run: cp config/database-ci.yml config/database.yml
+      - name: Webpack compilation
+        run: bundle exec rails webpacker:install
+      - name: Setup rails database
+        run: bundle exec rails db:setup
       - name: Run tests
-        env:
-          RAILS_ENV: test
-        run: |
-          sudo systemctl start mysql
-          cp config/database-ci.yml config/database.yml
-          bundle exec rake db:setup
-          bundle exec rake
+        run: bundle exec rails
