--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,6 +22,8 @@ jobs:
         run: sudo systemctl start mysql
       - name: Setup database connection configuration
         run: cp config/database-ci.yml config/database.yml
+      - name: Yarn install
+        run: yarn install --check-files
       - name: Procompile assets
         run: bundle exec rails assets:precompile
       - name: Setup database
