--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,18 +26,18 @@ jobs:
           cp config/database-ci.yml config/database.yml
           bundle exec rails db:setup
 
-      - name: Get Yarn cache directory
+      - name: Get yarn cache directory
         id: yarn-cache-dir-path
         run: echo "::set-output name=dir::$(yarn cache dir)"
 
-      - name: Use Yarn cache
+      - name: Use yarn cache
         uses: actions/cache@v2
         id: yarn-cache
         with:
           path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
 
-      - name: Yarn install
+      - name: yarn install
         run: yarn install --prefer-offline --frozen-lockfile --check-files
 
       - name: Procompile assets
