--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: ['2.7.2', '2.7.4']
+        ruby-version: ['2.7.2', '2.7.4', '3.0.2']
     steps:
       - uses: actions/checkout@v2
       - name: Set up ruby
