continue on error

--- a/.github/workflows/brakeman.yml
+++ b/.github/workflows/brakeman.yml
@@ -21,4 +21,5 @@ jobs:
           bundler-cache: true
 
       - name: Run brakeman
+        continue-on-error: true
         run: bundle exec brakeman
