--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -16,7 +16,7 @@ default: &default
   cache_manifest: false
 
   # Extract and emit a css file
-  extract_css: true
+  extract_css: false
 
   static_assets_extensions:
     - .jpg
@@ -35,11 +35,7 @@ default: &default
   extensions:
     - .mjs
     - .js
-    - .sass
-    - .scss
     - .css
-    - .module.sass
-    - .module.scss
     - .module.css
     - .png
     - .svg
