--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@rails/actiontext": "^6.0.2",
     "@rails/ujs": "^6.0.3-4",
     "@rails/webpacker": "5.3.0",
+    "@tailwindcss/forms": "^0.3.3",
     "core-js": "^3.8.0",
     "flatpickr": "^4.6.9",
     "jquery": "3.5.1",
