--- a/.github/workflows/brakeman.yml
+++ b/.github/workflows/brakeman.yml
@@ -1,6 +1,13 @@
 name: Brakeman
 
-on: [pull_request, push]
+on:
+  push:
+    branches:
+      - master
+      - staging
+  pull_request:
+    branches:
+      - '*'
 
 env:
   RAILS_ENV: test
