--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,6 +1,13 @@
 name: Tests
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master
+      - staging
+  pull_request:
+    branches:
+      - '*'
 
 env:
   RAILS_ENV: test
