--- a/.github/workflows/rubocop.yml
+++ b/.github/workflows/rubocop.yml
@@ -1,6 +1,13 @@
 name: RuboCop
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master
+      - staging
+  pull_request:
+    branches:
+      - '*'
 
 jobs:
   build:
