--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
     "@rails/ujs": "^6.0.3-4",
     "@rails/webpacker": "5.4.0",
     "@tailwindcss/forms": "^0.3.3",
+    "autoprefixer": "^9",
     "core-js": "^3.8.0",
     "flatpickr": "^4.6.9",
     "jquery": "3.5.1",
     "nprogress": "^0.2.0",
     "popper.js": "^1.16.1",
+    "postcss": "^7",
     "regenerator-runtime": "^0.13.7",
     "stimulus": "^2.0.0",
     "stimulus-flatpickr": "^1.4.0",
     "tablesort": "^5.2.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "trix": "^1.3.1",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
