--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "stimulus-flatpickr": "^1.4.0",
     "tablesort": "^5.2.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "tailwindcss-stimulus-components": "^2.2.2",
     "trix": "^1.3.1",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
