--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,11 @@ config/database.yml
 /vendor/bundle
 
 # Ignore the default SQLite database.
-/db/*.sqlite3
-/db/*.sqlite3-journal
+db/*.sqlite3
+db/*.sqlite3-journal
+
+# Ignore schema cache
+db/schema_cache.yml
 
 # Ignore all logfiles and tempfiles.
 /log/*.log
