--- a/test/fixtures/quotes.yml
+++ b/test/fixtures/quotes.yml
@@ -3,14 +3,14 @@
 quoteone:
   text_ciphertext: <%= Quote.generate_text_ciphertext("Dat neuken heb ik nog nooit geprobeerd, maar ik kijk wel eens poker.").inspect %>
   user_id: 1
-  reporter: 2
+  reporter_id: 2
 
 quotetwo:
   text_ciphertext: <%= Quote.generate_text_ciphertext("Het is het lelijkste dat ik ooit heb gezien - en ik heb baby's gezien.").inspect %>
   user_id: 2
-  reporter: 1
+  reporter_id: 1
 
 quotethree:
   text_ciphertext: <%= Quote.generate_text_ciphertext("Scintillianen zijn net joden.").inspect %>
   user_id: 2
-  reporter: 4
+  reporter_id: 4
