--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@hotwired/turbo-rails": "^7.0.0-rc.3",
-    "@rails/actiontext": "^6.0.2",
+    "@rails/actiontext": "^6.1.4-1",
     "@rails/ujs": "^6.0.3-4",
     "@rails/webpacker": "5.4.0",
     "@tailwindcss/forms": "^0.3.3",
