--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -51,4 +51,4 @@ jobs:
         run: bundle exec rails assets:precompile
 
       - name: Run tests
-        run: bundle exec rails test
+        run: bundle exec rails test:all
