--- a/test/fixtures/action_text/rich_texts.yml
+++ b/test/fixtures/action_text/rich_texts.yml
@@ -12,3 +12,13 @@ event_two:
   record: two (Event)
   name: body
   body: Randomevent
+
+meeting_one:
+  record: one (Meeting)
+  name: body
+  body: Testnotulen
+
+meeting_two:
+  record: two (Meeting)
+  name: body
+  body: Testnotulen
