--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
-    "@hotwired/turbo-rails": "^7.0.0-rc.3",
-    "@rails/actiontext": "^6.0.2",
-    "@rails/ujs": "^6.0.3-4",
+    "@hotwired/turbo-rails": "^7.0.1",
+    "@rails/actiontext": "^6.1.4-1",
+    "@rails/ujs": "^6.1.4-1",
     "@rails/webpacker": "5.4.0",
     "@tailwindcss/forms": "^0.3.3",
     "autoprefixer": "^9",
