--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ db/*.sqlite3-journal
 # Ignore schema cache
 db/schema_cache.yml
 
+# Ignore uploads
+storage
+
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
