--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "stimulus": "^2.0.0",
     "stimulus-flatpickr": "^1.4.0",
     "tablesort": "^5.2.1",
+    "tailwind-colors": "^1.1.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "tailwindcss-stimulus-components": "^2.2.2",
     "trix": "^1.3.1",
