--- a/test/fixtures/action_text/rich_texts.yml
+++ b/test/fixtures/action_text/rich_texts.yml
@@ -13,12 +13,22 @@ event_two:
   name: body
   body: Randomevent
 
-meeting_one:
+meeting_agenda_one:
+  record: one (Meeting)
+  name: agenda
+  body: Agenda
+
+meeting_agenda_two:
+  record: two (Meeting)
+  name: agenda
+  body: Agenda
+
+meeting_minutes_one:
   record: one (Meeting)
   name: body
   body: Testnotulen
 
-meeting_two:
+meeting_minutes_two:
   record: two (Meeting)
   name: body
   body: Testnotulen
