--- a/config/database.yml
+++ b/config/database.yml
@@ -2,16 +2,16 @@ development:
   adapter: mysql2
   encoding: utf8mb4
   database: hamers
-  username: hamers
-  password: hamers
+  username: root
+  password:
   host: 127.0.0.1
 
 test:
   adapter: mysql2
   encoding: utf8mb4
   database: hamers_test
-  username: hamers
-  password: hamers
+  username: root
+  password:
   host: 127.0.0.1
   strict: false
 
