--- a/test/fixtures/chugs.yml
+++ b/test/fixtures/chugs.yml
@@ -2,14 +2,12 @@
 
 snel:
   user: two
-  secs: 2
-  milis: 42
+  time: 2.42
   comment: SNELLL
   chugtype: grolsch
 
 traag:
   user: one
-  secs: 15
-  milis: 32
+  time: 15.32
   comment: Traaggg
   chugtype: ice
