--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Get yarn cache directory
         id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
+        run: echo "{name}={dir::$(yarn cache dir)}" >> $GITHUB_OUTPUT
 
       - name: Use yarn cache
         uses: actions/cache@v2
