--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -48,7 +48,7 @@ jobs:
         run: yarn install --prefer-offline --frozen-lockfile --check-files --openssl-legacy-provider
 
       - name: Procompile assets
-        run: bundle exec rails assets:precompile
+        run: bundle exec rails assets:precompile --openssl-legacy-provider
 
       - name: Run tests
         run: bundle exec rails test:all
