Downgrade to node 16

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,6 +18,7 @@ jobs:
     strategy:
       matrix:
         ruby-version: ['3.1.2']
+        node-version: ['16.16.0']
     steps:
       - uses: actions/checkout@v3
 
