--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,7 +49,7 @@ jobs:
         run: yarn install --prefer-offline --frozen-lockfile --check-files
 
       - name: Procompile assets
-        run: bundle exec rails assets:precompile
+        run: bundle exec rails assets:precompile NODE_OPTIONS="--openssl-legacy-provider"
 
       - name: Run tests
         run: bundle exec rails test:all
