--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "popper.js": "^1.16.1",
     "postcss": "^7",
     "regenerator-runtime": "^0.13.7",
+    "select2": "^4.1.0-rc.0",
     "stimulus": "^3.0",
     "stimulus-flatpickr": "^1.4.0",
     "tablesort": "^5.3",
