--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
 
   rails:
     build: .
+    command: bundle exec rails s -p 3000 -b '0.0.0.0'
     ports:
       - "30123:3000"
     depends_on:
