--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,13 @@ services:
 
   sidekiq:
     build: .
-    command: bundle exec sidekiq
+    command: bundle install && bundle exec sidekiq
     depends_on:
       - redis
 
   rails:
     build: .
-    command: bundle exec rails s -p 3000 -b '0.0.0.0'
+    command: bundle exec rails server -b '0.0.0.0'
     ports:
       - "30123:3000"
     depends_on:
