Try again with install

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,22 @@
 version: '3'
 services:
   redis:
+    container_name: redis
     image: redis
     ports:
       - "6379:6379"
 
   sidekiq:
+    container_name: sidekiq
     build: .
-    command: bundle exec sidekiq
+    command: bundle install && bundle exec sidekiq
     depends_on:
       - redis
+    environment:
+      - REDIS_URL=redis://redis:6379/0
 
   rails:
+    container_name: rails
     build: .
     command: bundle exec rails server -b '0.0.0.0'
     ports:
