--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -14,24 +14,23 @@ jobs:
     name: "🏗 Build Docker image"
     runs-on: ubuntu-latest
     steps:
-      - name: "📂 Checkout"
-        uses: actions/checkout@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
-      - name: "🔑 Login to GitHub Container Registry"
-        uses: docker/login-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.ACCESS_TOKEN }}
 
-      - id: docker-build
-        name: "🏗 Build image"
-        run: |
-          docker build -t ${{ env.github_repository }}:${{ github.sha }} .
-          docker tag ${{ env.github_repository }}:${{ github.sha }} ${{ env.github_repository }}:latest
-          docker push ${{ env.github_repository }}:${{ github.sha }}
-
-      - name: "📝 Set output"
-        run: |
-          echo "Docker image" >> $GITHUB_STEP_SUMMARY
-          echo "${{ github.sha }}" >> $GITHUB_STEP_SUMMARY
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          image: ${{ env.github_repository }}
+          # only tag the image if it's not a pull request
+          tags: ${{ github.event_name != 'pull_request' && (env.github_repository + ':latest') }}
