--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -32,6 +32,6 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: ${{ github.event_name != 'pull_request' }}
-          tags:
+          tags: |
             ${{ env.github_repository }}:latest
             ${{ env.github_repository }}:${{ github.sha }}
