--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,19 @@
 version: '3'
 services:
   redis:
-    container_name: redis
     image: redis
     ports:
       - "6379:6379"
 
   sidekiq:
-    container_name: sidekiq
     build: .
     command: bundle exec sidekiq
     depends_on:
       - redis
     environment:
-      - REDIS_URL=redis://redis:6379/0
+      REDIS_URL: redis://redis:6379/0
 
   rails:
-    container_name: rails
     build: .
     command: bundle exec rails server -b '0.0.0.0'
     ports:
@@ -25,5 +22,5 @@ services:
       - sidekiq
       - redis
     environment:
-      - REDIS_URL=redis://redis:6379/0
-      - RAILS_ENV=${RAILS_ENV:-development}
+      REDIS_URL: redis://redis:6379/0
+      RAILS_ENV: ${RAILS_ENV:-development}
